# memory-bot

./: .gitignore  README.md  README_WHATSAPP.md  README_WHATSAPP_WEB.md  SUMMARY.md  channels.yaml  memory_bot_serve.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_qr.sh  run_whatsapp_bot.py  test_simple.py  test_whatsapp_local.py  whatsapp-bridge.js  whatsapp_bridge.py  whatsapp_web.py
core/: __init__.py  agent.py
core/llm/: __init__.py  base.py  mock.py  models.py  openai.py
core/memory/: __init__.py  database.py  indexer.py  models.py  parser.py
core/session/: __init__.py  builder.py  database.py  manager.py  models.py
core/utils/: __init__.py
discord_bot/: commands.py  config.py
memory-bot/: README_DISCORD.md  TECHNICAL_NOTES.md
memory-bot/core/tools/: __init__.py  base.py  file_tool.py  search_tool.py  shell_tool.py
memory-bot/discord_bot/: __init__.py  bot.py
memory-bot/tests/unit/: test_discord_bot.py
memory-bot/tests/unit/tools/: __init__.py  test_file_tool.py  test_search_tool.py  test_shell_tool.py
tests/unit/: test_agent.py  test_core.py  test_llm.py  test_memory.py  test_session.py  test_session_persistence.py
whatsapp_bot/: __init__.py  bot.py  commands.py  config.py
whatsapp_bot/adapters/: __init__.py
